--- a/app/pug/wisywig.pug
+++ b/app/pug/wisywig.pug
@@ -9,17 +9,20 @@ block content
 				.content-title
 					.content-titlebox_dark.margin-top-xl-15
 						h4 Текст
-				.content-title
-					.content-titlebox
-						h2 Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы
+
 			.wisywig-content
 				h1 Заголовок 1 уровня
 				h2 Заголовок 2 уровня
 				h3 Заголовок 3 уровня
 				h4 Заголовок 4 уровня
+				h5 Заголовок 5 уровня
 				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam.
 				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam.
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam.
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi repellendus ullam? Aliquam expedita fuga hic, ipsum molestiae quia veniam. &nbsp;
+					a(href="#") Lorem ipsum
+					b &nbsp;Bold,&nbsp;
+					i Italic,&nbsp;
+					u Underline
 				ul
 					li Пункт списка
 					li Пункт списка
@@ -72,5 +75,3 @@ block content
 							td Подразделение ВМЗ по настройке технических решений
 							td Актуальная база для решений программного комплекса ТШГ-251, редакция 6250
 							td 23.12.2019 Учитывается отступ в 15px справа
-
-
