--- a/app/css/style.css
+++ b/app/css/style.css
@@ -7256,6 +7256,161 @@ select.form-control:not([size]):not([multiple]) {
   color: #757575;
 }
 
+.wisywig-content h1 {
+  margin-bottom: 10px;
+  font-size: 40px;
+  font-family: "PT Serif", serif;
+}
+
+.wisywig-content h2 {
+  margin-bottom: 10px;
+  font-size: 32px;
+  font-family: "PT Serif", serif;
+}
+
+.wisywig-content h3 {
+  margin-bottom: 10px;
+  font-size: 28px;
+  font-family: "PT Serif", serif;
+}
+
+.wisywig-content h4 {
+  margin-bottom: 10px;
+  font-size: 24px;
+  font-family: "PT Serif", serif;
+}
+
+.wisywig-content h5 {
+  margin-bottom: 10px;
+  font-size: 24px;
+  font-family: "PT Serif", serif;
+}
+
+.wisywig-content p {
+  margin-bottom: 15px;
+  font-size: 17px;
+  line-height: 1.4;
+  font-family: "PT Serif", serif;
+}
+
+.wisywig-content a {
+  text-decoration: underline;
+  color: #008ACC;
+}
+
+.wisywig-content li {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.4;
+  font-family: "PT Serif", serif;
+}
+
+.wisywig-content ul {
+  margin-bottom: 15px;
+  list-style-type: disc;
+  padding-left: 35px;
+}
+
+.wisywig-content > ul {
+  margin-left: -15px;
+}
+
+.wisywig-content ol {
+  margin-bottom: 15px;
+  list-style: none;
+  counter-reset: li;
+  padding-left: 30px;
+}
+
+.wisywig-content ol li:before {
+  content: counters(li, ".") ". ";
+  counter-increment: li;
+}
+
+.wisywig-content > ol {
+  padding-left: 0;
+}
+
+.wisywig-content table {
+  margin-bottom: 15px;
+  border-collapse: separate;
+  border: 1px solid #bcbdc0;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  width: 100%;
+  border-spacing: 0px;
+}
+
+.wisywig-content table thead {
+  -webkit-border-radius: 5px 0 0 5px;
+          border-radius: 5px 0 0 5px;
+  overflow: hidden;
+  color: #f4f5f5;
+  background-color: #797c82;
+}
+
+.wisywig-content table thead tr {
+  -webkit-border-radius: 5px 0 0 5px;
+          border-radius: 5px 0 0 5px;
+  overflow: hidden;
+}
+
+.wisywig-content table thead tr th:first-child {
+  -webkit-border-radius: 5px 0 0 0;
+          border-radius: 5px 0 0 0;
+  overflow: hidden;
+}
+
+.wisywig-content table thead tr th:last-child {
+  -webkit-border-radius: 0 5px 0 0;
+          border-radius: 0 5px 0 0;
+  overflow: hidden;
+}
+
+.wisywig-content table td,
+.wisywig-content table th {
+  max-width: 200px;
+  padding: 11px 15px;
+  vertical-align: top;
+  text-align: left;
+  border-bottom: 1px solid #bcbdc0;
+  border-left: 1px solid #bcbdc0;
+}
+
+.wisywig-content table td:first-child,
+.wisywig-content table th:first-child {
+  max-width: 85px;
+  border-left: 0;
+}
+
+.wisywig-content table td:last-child,
+.wisywig-content table th:last-child {
+  max-width: 185px;
+  border-right: 0;
+}
+
+.wisywig-content table tr:nth-child(2n) {
+  background-color: #f4f5f5;
+}
+
+.wisywig-content table tr:last-child td {
+  border-bottom: 0;
+}
+
+.wisywig-content table tr:last-child td:first-child {
+  -webkit-border-radius: 0 0 0 5px;
+          border-radius: 0 0 0 5px;
+}
+
+.wisywig-content table tr:last-child td:last-child {
+  -webkit-border-radius: 0 0 5px 0;
+          border-radius: 0 0 5px 0;
+}
+
+.wisywig-content table tr:first-child td {
+  border-top: 0;
+}
+
 @media (min-width: 576px) {
   .margin-top-sm-0 {
     margin-top: 0px !important;
@@ -8776,6 +8931,11 @@ select.form-control:not([size]):not([multiple]) {
 
   .main-icon__images.active .main-icon__img.active:hover {
     color: #757575;
+  }
+
+  .wisywig-content a:hover {
+    text-decoration: none;
+    color: #ee3124;
   }
 }
 
