--- a/app/pug/cards/_cards-full-galery-slider-modern.pug
+++ b/app/pug/cards/_cards-full-galery-slider-modern.pug
@@ -42,3 +42,12 @@ mixin slideModern ()
 			+slideModern()
 			+slideModern()
 			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
