--- a/app/pug/gallery.pug
+++ b/app/pug/gallery.pug
@@ -26,6 +26,23 @@ block content
 	include cards/_cards-full-galery-slider-modern
 
 	//Галерея - "Слайдер с описанием", тип "Модерн"
+	- var slides = 5;
+	include cards/_cards-full-galery-slider-modern_bottomtext
+
+	//Галерея - "Слайдер с описанием", тип "Модерн"
+	- var slides = 4;
+	include cards/_cards-full-galery-slider-modern_bottomtext
+
+	//Галерея - "Слайдер с описанием", тип "Модерн"
+	- var slides = 3;
+	include cards/_cards-full-galery-slider-modern_bottomtext
+
+	//Галерея - "Слайдер с описанием", тип "Модерн"
+	- var slides = 2;
+	include cards/_cards-full-galery-slider-modern_bottomtext
+
+	//Галерея - "Слайдер с описанием", тип "Модерн"
+	- var slides = 1;
 	include cards/_cards-full-galery-slider-modern_bottomtext
 
 	- var pageTitle = 'Галерея "Слайдер"';
