--- a/app/pug/cards/_cards-full-galery-slider-modern_bottomtext.pug
+++ b/app/pug/cards/_cards-full-galery-slider-modern_bottomtext.pug
@@ -1,3 +1,5 @@
+- var slides;
+
 mixin slideModern ()
 	.card-full-slider__item.card-modern-slider__item
 		.card-modern__imgbox.card__imgbox(style='background-image: url(img/img-block-full-04.jpg);')
@@ -34,8 +36,9 @@ mixin slideModern ()
 
 	.card.card-full.card-full-slider.card-modern
 		.card-full-slider-wrap.card-wrap.card-full-wrap.card-modern-slider-wrap
-			+slideModern()
-			+slideModern()
-			+slideModern()
-			+slideModern()
-			+slideModern()
+			if slides === undefined || text === false
+				- slides = 4
+
+			while slides > 0
+				- slides--
+				+slideModern()
