--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -595,11 +595,18 @@
 				font-family: "Roboto", sans-serif;
 				font-size: 14px;
 				font-weight: 400;
+				//letter-spacing: 2px;
 				@include md-block {
 					font-size: 8px;
 				}
 				@include xs-block {
 					font-size: 10px;
+				}
+				.slide-num {
+					cursor: pointer;
+					@include hover {
+						color: $light-color;
+					}
 				}
 				strong {
 					font-size: 18px;
@@ -798,6 +805,8 @@
 				p {
 					margin-bottom: 15px;
 					font-weight: 400;
+					line-height: 1.4;
+					color: #d0d1d3;
 					@include md-block {
 						font-size: 10px;
 						margin-bottom: 10px;
