--- a/app/pug/cards/_card-full-slider.pug
+++ b/app/pug/cards/_card-full-slider.pug
@@ -16,5 +16,5 @@
 				- var imagesUrl = imagesUrl.concat(imagesUrl);
 				each imgUrl in imagesUrl
 					.card-full-slider__item
-						.card-full-slider__imgbox.card__imgbox(style='background-image: url('+imgUrl+');', data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-01')
+						.card-full-slider__imgbox.card__imgbox(style='background-image: url('+imgUrl+');', data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-01')
 							img.card-image(src=imgUrl)
