--- a/app/pug/cards/_card-twothird-third-slider.pug
+++ b/app/pug/cards/_card-twothird-third-slider.pug
@@ -14,16 +14,16 @@
 		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl='img/article-img-02.jpg';
-				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modalContentSlider", data-toggle="modal", data-target-content='#cardModalSlider-02')
+				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
 				- var imgUrl = 'img/article-img-01.jpg';
-				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-02')
+				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
 		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl='img/article-img-02.jpg';
-				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modalContentSlider", data-toggle="modal", data-target-content='#cardModalSlider-02')
+				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
 				- var imgUrl = 'img/article-img-01.jpg';
-				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-02')
+				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
