--- a/app/pug/modals/_modal-content-slider.pug
+++ b/app/pug/modals/_modal-content-slider.pug
@@ -1,4 +1,4 @@
-#modalContentSlider.modal.fade.modal-main.modal-main-contents(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
+#modal-content-slider.modal.fade.modal-main.modal-main-contents(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
 	.modal-dialog.container(role='document')
 		.modal-content
 			.row
