--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -69,7 +69,7 @@
 		background-color: #F4F5F5;
 		border: 1px solid #DDDEE0;
 		border-radius: 5px;
-		transition: 0.4s;
+		//transition: 0.4s;
 		opacity: 0;
 		@include lg-block {
 			opacity: 1;
