--- a/app/css/style.css
+++ b/app/css/style.css
@@ -9900,6 +9900,7 @@ select.form-control:not([size]):not([multiple]) {
 
   .link-search {
     font-size: 9px;
+    margin-bottom: 5px;
   }
 
   .button {
@@ -10871,6 +10872,26 @@ select.form-control:not([size]):not([multiple]) {
   .content-text p {
     font-size: 10px;
     margin-bottom: 10px;
+  }
+
+  .content-text.video-caption {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .content-text.video-caption p {
+    font-size: 12px;
+  }
+
+  .content-text.video-caption h3 {
+    font-size: 16px;
   }
 
   .card__imgbox_xs {
