--- a/app/pug/search-result.pug
+++ b/app/pug/search-result.pug
@@ -5,7 +5,7 @@ block vars
 	mixin searchRes()
 		.card
 			.content-text
-				h3.margin-bottom-10
+				h3.margin-bottom-5.margin-bottom-lg-10
 					a(href="#") Серафимович, Александр Серафимович
 				a.link-search(href='') https://portal.omk.ru/news/omk_news...
 				p  ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...
@@ -37,10 +37,10 @@ block content
 						p
 		.col-12.col-sm-8
 			.card
-				.content-text.text-ddd-210
-					h3.margin-bottom-10
+				.content-text.video-caption
+					h3.margin-bottom-5.margin-bottom-lg-10
 						a(href="#") Интервью с Серафимович Александром про модернизацию новых разработок
-					.card-date.card-date_big.margin-bottom-10 11 Декабря 2018, 17:44
+					.card-date.card-date_big.margin-bottom-5.margin-bottom-lg-10 11 Декабря 2018, 17:44
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
 					a.button.card__more(href='#') Читать далее
