--- a/app/pug/cards/_cards-full-galery-slider-modern.pug
+++ b/app/pug/cards/_cards-full-galery-slider-modern.pug
@@ -4,7 +4,7 @@ mixin slideModern ()
 			img(src="img/article-img-01.jpg", alt="image")
 			.card-modern__inn
 				.row
-					.col-12.col-md-7.offset-md-5
+					.col-12.col-sm-7.offset-sm-5
 						.card__info.card-modern__info
 							.card-modern__content
 								.content-title
