--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -301,9 +301,9 @@
 			flex-wrap: wrap;
 			padding-top: 0;
 		}
-		@media (max-width: 767px){
-			display: none;
-		}
+		//@media (max-width: 767px){
+		//	display: none;
+		//}
 		@media (max-width: 767.98px){
 			display: none;
 		}
