--- a/app/pug/all-pages.pug
+++ b/app/pug/all-pages.pug
@@ -39,7 +39,8 @@ html(lang='ru')
 	- items.push({title: 'Форма, логотипы, документы', link: 'others.html'});
 	- items.push({title: 'Таблицы', link: 'tables.html'});
 	- items.push({title: 'Спойлер, контент-слайдер', link: 'spoyler.html'});
-	- items.push({title: 'Модули блогов, доска почета', link: 'blocks.html'});
+	- items.push({title: 'Модули блогов', link: 'blocks.html'});
+	- items.push({title: 'Доска почета', link: 'honour.html'});
 	- items.push({title: 'Стайлгайд', link: 'stylegide.html'});
 	body
 		.container
