--- a/app/sass/_content.scss
+++ b/app/sass/_content.scss
@@ -70,6 +70,9 @@
 			h4 {
 				font-weight: 400;
 				font-size: 22px;
+				@include md-block {
+					font-size: 12px;
+				}
 			}
 		}
 
@@ -77,7 +80,7 @@
 			position: relative;
 			padding-top: 5px;
 			padding-bottom: 7px;
-			padding-right: 15px;
+			padding-right: 30px;
 			transition: transform 0.4s, background-color 0.4s;
 			cursor: pointer;
 			h1, h2, h3, h4, h5, p, div, span {
@@ -366,6 +369,33 @@
 		position: static;
 		top: auto;
 		bottom: auto;
+	}
+}
+
+.spoiler {
+	&-title {
+		@include clearfix;
+		&>* {
+			float: left;
+		}
+		.slide-count {
+			display: block;
+			text-align: right;
+			float: none;
+			margin-right: 40px;
+
+			font-family: Roboto, sans-serif;
+			font-size: 16px;
+			line-height: 26.4px;
+			vertical-align: baseline;
+			@include md-block {
+				font-size: 12px;
+				line-height: 14.4px;
+			}
+			@include xs-block {
+				display: none;
+			}
+		}
 	}
 }
 
