--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -801,6 +801,7 @@ header.header
 						.breadcrumb
 							.breadcrumb-group
 								a.breadcrumb__link(href='#') Главная
-								a.breadcrumb__link(href='#') Новости
+								a.breadcrumb__link(href='#') Новости ОМК
+								a.breadcrumb__link(href='#') Производственная Система
 							.breadcrumb-back
 								a.breadcrumb__link(href='#') &lt;&lt;Назад
