--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2828,7 +2828,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .header.scroll {
   position: fixed;
-  z-index: 100;
+  z-index: 1000;
   padding-top: 15px;
   padding-bottom: 0;
   background-color: #fff;
@@ -3066,6 +3066,26 @@ select.form-control:not([size]):not([multiple]) {
   -webkit-border-radius: 5px;
           border-radius: 5px;
   opacity: 0;
+}
+
+.header-overlay {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 45px;
+  background-color: #fff;
+}
+
+.header-overlay:before {
+  content: '';
+  display: block;
+  margin: 10px auto 0;
+  width: 100%;
+  max-width: 1170px;
+  height: 36px;
+  background-color: #F4F5F5;
+  border: 1px solid #DDDEE0;
+  opacity: 0.8;
 }
 
 .header-box {
