--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -35,7 +35,7 @@
 }
 
 
-.header {	
+.header {
 	position: sticky;
 	top: 0;
 	z-index: 1000;
@@ -91,6 +91,27 @@
 	// & + .content {
 	// 	padding-top: 154px;
 	// }
+	&-overlay {
+		position: fixed;
+		z-index: 999;
+		width: 100%;
+		height: 45px;
+		background-color: #fff;
+		&:before {
+			content: '';
+			display: block;
+			margin: 10px auto 0;
+
+			width: 100%;
+			max-width: 1170px;
+			height: 36px;
+
+			background-color: #F4F5F5;
+			border: 1px solid #DDDEE0;
+			opacity: 0.8;
+
+		}
+	}
 	&-box {
 		position: relative;
 		display: flex;
