--- a/app/pug/page/_page-head-filters.pug
+++ b/app/pug/page/_page-head-filters.pug
@@ -24,8 +24,8 @@
 								option(value='Год') Год
 								option(value='Неделя') Неделя
 								option(value='Квартал') Квартал
-								option(value='true-date') Точная дата
-								option#period-date(value='', hidden='')  
+								option#period-date(value='true-date', data-buffer='true-date') Точная дата
+								//option#period-date(value='', hidden='')  
 							.button.button-o.form-filters__searchbox
 								input#formSearchInput2.form-filters__search(type='search')
 								button.form-filters__submit.icon-search(type='submit')
