--- a/app/pug/blocks/_block-blog.pug
+++ b/app/pug/blocks/_block-blog.pug
@@ -21,7 +21,7 @@
 		.card
 			.article-imgwrap.article-imgwrap_slim
 				.article-imgbox.article-imgbox_slim(style='background-image: url(img/article-prev-img-01.jpg);')
-			- var text = '24 Сентября 2018, Мацинова Елена';
+			- var text = '24 Сентября 2018, Константин Константинопольский Константинов';
 			include ../modules/_tag-box
 
 			.content-title
