--- a/app/pug/blocks/_block-links.pug
+++ b/app/pug/blocks/_block-links.pug
@@ -18,8 +18,8 @@
 					- var items = ['Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81', 'Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;', 'Применяемых технологических методов изготовления и ремонта изделий.', 'Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81'];
 					each item in items
 						.card-links__lnkbox
-							a.link-icon-save(href="")
-							a.card-links__lnk(href="")= item
+							a.link-icon-save(href="#save")
+							a.card-links__lnk(href="#link")= item
 	.card
 		.card-links
 			.card-links-wrap
@@ -30,8 +30,8 @@
 					- var items = ['Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81', 'Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;', 'Применяемых технологических методов изготовления и ремонта изделий.', 'Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81'];
 					each item in items
 						.card-links__lnkbox
-							a.link-icon-save(href="")
-							a.card-links__lnk(href="")= item
+							a.link-icon-save(href="#save")
+							a.card-links__lnk(href="#link")= item
 	.card
 		.content-title
 			.content-titlebox
@@ -47,7 +47,7 @@
 					- var items = ['Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81', 'Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;', 'Применяемых технологических методов изготовления и ремонта изделий.', 'Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81'];
 					each item in items
 						.card-links__lnkbox
-							a.link-icon-save(href="")
-							a.card-links__lnk(href="")= item
+							a.link-icon-save(href="#save")
+							a.card-links__lnk(href="#link")= item
 	//.card
 	//	a.link-big(href="") &gt;&gt; Галереи
