--- a/app/sass/_article.scss
+++ b/app/sass/_article.scss
@@ -117,6 +117,9 @@
 		@include md-block {
 			font-size: 14px;
 		}
+		@include sm-block {
+			font-size: 16px;
+		}
 		@include xs-block {
 			padding-left: 58px;
 			margin: 0 -15px 15px;
@@ -144,6 +147,9 @@
 				font-size: 14px;
 				margin-bottom: 10px;
 			}
+			@include sm-block {
+				font-size: 16px;
+			}
 		}
 		h3 {
 			margin-bottom: 18px;
@@ -168,10 +174,14 @@
 			margin-top: 15px;
 			font-size: 10px;
 		}
+		@include sm-block {
+			padding: 5px;
+		}
 		p {
 			@include xs-block {
 				display: inline-block;
 				margin-top: 5px;
+				font-size: 14px;
 			}
 		}
 		.article-author__left {
