--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -384,7 +384,7 @@
 		}
 		@include xs-block {
 			max-height: 67px;
-			font-size: 20px;
+			font-size: 18px;
 			min-height: auto;
 		}
 		&>h1, &>h2, &>h3, &>h4, &>h5 {
@@ -414,15 +414,6 @@
 		font-size: 16px;
 		font-weight: 400;
 		line-height: 1.4;
-		&.text-ddd-135 {
-			max-height: 135px;
-			@include md-block {
-				max-height: 110px;
-			}
-			@include xs-block {
-				max-height: 135px;
-			}
-		}
 
 		p {
 			font-size: 17px;
@@ -431,7 +422,7 @@
 				font-size: 9px;
 			}
 			@include xs-block {
-				font-size: 12px;
+				font-size: 16px;
 			}
 			&:last-child {
 				margin-bottom: 0;
@@ -483,6 +474,7 @@
 		}
 		@include xs-block {
 			font-size: 12px;
+			max-width: 200px;
 		}
 		&_light {
 			color: $light-color;
@@ -799,7 +791,7 @@
 					font-size: 28px;
 				}
 				@include xs-block {
-					font-size: 20px;
+					font-size: 24px;
 				}
 				* {
 					font-size: inherit;
@@ -822,7 +814,7 @@
 						margin-bottom: 10px;
 					}
 					@include xs-block {
-						font-size: 12px;
+						font-size: 16px;
 					}
 				}
 			}
@@ -1374,11 +1366,11 @@
 		}
 		@include sm-block {
 			display: inline-block;
-			font-size: 16px;
-			max-width: 16px;
+			font-size: 22px;
+			max-width: 22px;
 		}
 		@include xs-block {
-			font-size: 12px;
+			//font-size: 12px;
 			//max-width: 12px;
 		}
 		i {
@@ -1388,6 +1380,9 @@
 	&__items {
 		width: 100%;
 		padding-left: 28px;
+		@include sm-block {
+			padding-left: 50px;
+		}
 	}
 	&__item {
 		padding: 5px 10px;
@@ -1455,6 +1450,7 @@
 			font-size: 10px;
 			line-height: 1.2;
 		}
+
 		.link-icon-save {
 
 			position: absolute;
@@ -1474,6 +1470,10 @@
 				opacity: 1;
 				font-size: 14px;
 			}
+			@include sm-block {
+				left: -20px;
+				top: 2px;
+			}
 			@include before('\e920') {
 				top: 50%;
 				left: 0;
@@ -1488,27 +1488,16 @@
 					left: 12px;
 					top: 3px;
 				}
-				//opacity: 0;
-				//transition: 0.4s;
+				@include xs-block {
+					font-size: 22px;
+				}
 			}
-
-			//&:before {
-			//	@include hover {
-			//		color: $special-color;
-			//	}
-			//}
-
 		}
 		@include hover {
 			.card-links__lnk {
-				//text-decoration: underline;
 			}
 			.link-icon-save {
 				opacity: 1;
-				//&:before {
-				//	opacity: 1;
-				//	left: 0;
-				//}
 			}
 		}
 
@@ -1531,7 +1520,7 @@
 		}
 
 		@include sm-block {
-			font-size: 10px;
+			font-size: 16px;
 		}
 
 		&.color-thin {
